# yt

./: .gitignore  README.md  [小叔TV]_[为何国内结婚的人越来越少？听了被催婚年轻人的心声,终于明白了真实原因 ｜ 北京-上海高铁旅行有感 (小叔TV EP266)].summary.md  build.sh  clear.sh  install.sh  pyproject.toml  release.sh  release_gh.sh  requirements.txt  setup.sh  uninstall.sh  yt.py
commands/: download.py  summarize.py  transcript.py
yt/: __init__.py  cli.py
yt/commands/: __init__.py  summarize.py  transcript.py  update.py
yt/utils/: __init__.py  cacheUtils.py
